apps/infra/authentik/resources/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
  annotations:
    argocd.argoproj.io/sync-wave: "-4"
