apps/infra/authentik/resources/external-dns.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: authentik-extname
    annotations:
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:N1XTsvM/6xPaFZ2WpzROPxVzG9a6ZZb3B/MmKg==,iv:WQ4+isOjH8jn31TtOkFS3Qituev/58V7ACnyS5lJOvo=,tag:M6pDRqnvO8NY4g0/uDkFUQ==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
spec:
    type: ExternalName
    externalName: ENC[AES256_GCM,data:jtJckzSm97++UvuUDXkE6LrDoNgRQ8lDOtv1MA==,iv:7HG0w3tTorzSCkWeQ+XkKqzeTDinuerztyTpL3kvQJY=,tag:WmpkNibmeSPFjFJmRCaQfw==,type:str]
    sessionAffinity: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLZnhIL05hQ3ZqOU1QK3Mv
[...]
            BMns2E+qW6Q2ov9LTa27NSSXWk7VR5/4kaMWZ5hB0wxCbgWcQBIiTQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-07-06T17:07:18Z"
    mac: ENC[AES256_GCM,data:YpyXhH0AejVUltTjCmJ/5gvzAV9Esr/1brzhW//hun7Ffp/+Kq00FfHtpc+nQvknGPA7MQ+sNr4+Fzz64zismTVm1CAlL8VVC6fR3AbDASuZGoDcaWtI3Mt0vdfoTbz8AiFJJMupRSqDputrjAFj2bUVuIyvV4KtC3a5khI2SAQ=,iv:uJvMYvQEMgtnaShv6W6Raij/VArx/eK7Y1udERla904=,tag:3wH6DdJtf0mp90f9ZVxmwg==,type:str]
    pgp:
        - created_at: "2024-06-19T18:53:03Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/8Cn2U3Iu2FNHQwpg5DULYkirkmI2jBmRqFlqHilb/VrID
[...]
            =frxg
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
