apps/infra/authentik/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: ENC[AES256_GCM,data:ccr2F+dZcVMcI3uIz8WrsREYcCDMS393bHZoSQ==,iv:6bqIzWQacZG+M9xFfXf/Kl+j0QnPneiMkBOXsaWLUTg=,tag:OGSzf+b3HIQgtiqJfLOsBA==,type:str]
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:kszgaNkyCRwUi+9gXFpvuaFDZukPpKTtFKQVDg==,iv:SYGv2nocjph7Hd0Ca8yWVD4Ynx6BBC+00QknNumrn54=,tag:p3LxfyMJVJZDIoDDYEednA==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:IU9PJH68JaifvI88BO+It1a8dsQL65Tg,iv:dTgj5YUomjUBAy0/HnuxtJQeoN2qy2Z7fl8u9WvJEgk=,tag:9b4DwDia1Sv+0xUf9dz1wA==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: authentik
    namespace: authentik
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:LGQFfmNKv4Dng0L9f/lusp1B1ZAepiWho8NKajOmd42Ipeob,iv:sukGy93Iw0MGgKG/eayW9IWzEUZgZfXqMSLXQnaGCrU=,tag:gA17AhZXfslN1dv7e1oeiA==,type:str]
          middlewares:
            - name: redirect-to-https
            - name: rate-limit
              namespace: traefik
          services:
            - kind: TraefikService
              name: authentik-server
              namespace: authentik
    tls:
        domains:
            - main: ENC[AES256_GCM,data:h8NCcEnNQQFACctRMrHiVVqqu+SQAJQw,iv:ikKaCUqUgdRcm40QX9VnQrfP3Cure/ppAPdkRrAE4FY=,tag:Yoc3o5jkEFoGmi7WulAIEw==,type:str]
              sans:
                - ENC[AES256_GCM,data:BqNPFZZ5q+mVY+JUsUoXHaV4o6EnBkrqUA==,iv:ZTnhn7cgMp4gXhwL/y4uLSZb82dSUx0Xrx1ob1jbpqA=,tag:vzSVfkQ736eaaBnMHpq/6w==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: authentik-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2ektWNmZQZll1d2ZSUWJN
[...]
            II6bJk2wnXO6LVFPDRzZIWneE9iXIs4CM5CihY5yJFgqyYb6iZG+5w==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-02-04T23:17:09Z"
    mac: ENC[AES256_GCM,data:hbGGikTTZajmfVW/Zt3hnt78jSvi5wTys0TS8EK0tq5kMbWKl6GRGHMxgWuA7iXNNz+J2i9cGeBcaEGfC3r37vR0DfeN2+wiaHlcm2e/OpOC8quzFZaatsKRGGDbRhcul75kq6YsYegcTtWkeD5blkaAW7R/xOYlB+J6qvMavTQ=,iv:AmLtGe8fmuHiUvqood2Ask6pE4tbXLgXAlyY+7z4wT8=,tag:BBoX4EZlcx5TEW1MfepphA==,type:str]
    pgp:
        - created_at: "2024-10-11T22:16:09Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/7BVQ8JAmDm8iAZThgB/1GrJ+7pn8rheVnDWZf+KqoRLB8
[...]
            =kj47
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|cert-manager.io/common-name|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.2
