apps/infra/authentik/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        cert-manager.io/common-name: ENC[AES256_GCM,data:BIjDPQANT1nxpurm/GObUy7zxRB1FyxRo5C72g==,iv:Z66fceqEKLnqsT/GAS8eo0DBb80SbPwkYfjYGj760sg=,tag:bHBCEMDIDW966B+7EdAtqw==,type:str]
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:AM74mRwOEYrPgPIvIcVqXJ+Hb8Aub7MYxj8hcQ==,iv:Hd6T81w2NcfSSnpl+3S8hPC/PfPq5kCTuGZHjNLR1hU=,tag:SWOuUxHA7ioYxBj1TwmADQ==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:DZV94xN4ajecih2Vb3F1nHzzyrePTAI7,iv:OnPvLCoHNiVEwMLEHu4hXJWGgC4JkuuEHnEXkHMSBKY=,tag:Z/V7e9A8sQgZHg/wg7wSjQ==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: authentik-staging
    namespace: authentik
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:FxrTrcVDKGSlDZC6ONV7TY8p23REgbMJd+uQc5m1SoRl5j2W,iv:Mtig4fajKzqeEfUQQ5tMcTK1y1E9ImDvVidyXKs2xlU=,tag:vr2kT1oKHNPSd4k551pIag==,type:str]
          middlewares:
            - name: redirect-to-https
            - name: rate-limit
              namespace: traefik
          services:
            - kind: TraefikService
              name: authentik-server
              namespace: authentik
    tls:
        domains:
            - main: ENC[AES256_GCM,data:ECtSP6GmgaN8HN0+zH7bxrUBIYvTgVZn,iv:3vas+wUgWHp+imVZZwBqOuS2xmzhbfIQ3jHsHedJh0I=,tag:mD+IJmXieFGSC0un3dNHfg==,type:str]
              sans:
                - ENC[AES256_GCM,data:3FLNCZ+Kyi9Tq0QhrCj3uf8KdLL0GGx8KA==,iv:bmUUt8OT28TzDCGtyXMxS6Ctt1Rdq48/1fsddWbyb3c=,tag:ewWkjt6SmGAwuK16PEBZOw==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: authentik-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoNGd1czNZYklzVDFEWnIw
[...]
            rjNx3yyqAJsdcfS9hN76/axGxLtzKho4iON9a8JcjnWwCahEgQWeWg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-02-04T23:17:02Z"
    mac: ENC[AES256_GCM,data:bnNH7SwSFlUCN+ybSvlLGbU5Lhcui0RZoXnAlGJj74M4J8YKa84mbt+C21r30tnkgNfnY+zkYht7FMIxyZzveBAu3x+S6K2siLmI0RYbqxNmKxxWVRQ0DxaUhckAEzvToReloyWvsSrs+J+4rhqyX6qajKC6ozjb9Q/ATtHSues=,iv:YL3L9ym70ZeGXjdzsfxvhWvy8ErOEkdNCEu0X1Angbg=,tag:A3gFvG7Y4bDlyFHMpWWgxA==,type:str]
    pgp:
        - created_at: "2024-10-11T22:16:15Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/+Lj7Huymicxv+P7w+aiGtP30KNGHAZVA7xz/cq3dskiDv
[...]
            =A90o
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|cert-manager.io/common-name|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.2
